# workspace-deep-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dev_task.py  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
data/: sales_data.csv
src/deep_agents/: __init__.py  agent_service.py  app.py  cli.py  config.py  sandbox.py  tools.py  ui.py
tests/: test_sandbox_policy.py
