[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-agents"
version = "0.1.0"
description = "Production-ready Deep Agents workspace runner with Streamlit UI and guarded shell execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.7",
    "langchain-openai>=1.2.1",
    "langchain-daytona>=0.0.5",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.41.0",
    "streamlit>=1.45.1",
    "pandas>=2.2.0",
    "matplotlib>=3.10.0",
    "ipykernel>=7.2.0",
    "packaging>=25.0",
]

[project.scripts]
deep-agents = "deep_agents.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deep_agents*"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true
extend-exclude = [
    ".venv",
    "data",
    "workspace_artifacts",
    "runner.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
